Fixed navbar owerflow on small screens

--- a/my-app-frontend/src/components/Navbar.css
+++ b/my-app-frontend/src/components/Navbar.css
@@ -205,7 +205,7 @@
     top: 0;
     max-height: 20px;
     width: 100%;
-    padding: 10px 15px;
+    padding: 10px 0px;
     left: 50%;
     transform: translateX(-50%);
     transition: none;
